kubernetes/apps/network/stunner/gateway/internal.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
    external-dns.alpha.kubernetes.io/hostname: turn.${SECRET_DOMAIN}
    lbipam.cilium.io/ips: 192.168.0.192
    lbipam.cilium.io/sharing-key: internal
  labels:
    stunner.l7mp.io/owned-by: stunner
    stunner.l7mp.io/related-gateway-name: stunner
    stunner.l7mp.io/related-gateway-namespace: network
  name: stunner-lb-internal
  namespace: network
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Local
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: udp
      port: 3478
      protocol: UDP
      targetPort: 3478
  selector:
    app: stunner
    stunner.l7mp.io/related-gateway-name: stunner
    stunner.l7mp.io/related-gateway-namespace: network
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
    external-dns.alpha.kubernetes.io/hostname: turn.${SECRET_DOMAIN}
    # lbipam.cilium.io/ips: 192.168.0.192
    # lbipam.cilium.io/sharing-key: internal
  labels:
    stunner.l7mp.io/owned-by: stunner
    stunner.l7mp.io/related-gateway-name: stunner
    stunner.l7mp.io/related-gateway-namespace: network
  name: stunner-lb-external
  namespace: network
spec:
  loadBalancerClass: io.cilium/node
  externalTrafficPolicy: Local
  internalTrafficPolicy: Cluster
  ports:
    - name: udp
      port: 3478
      protocol: UDP
      targetPort: 3478
  selector:
    app: stunner
    stunner.l7mp.io/related-gateway-name: stunner
    stunner.l7mp.io/related-gateway-namespace: network
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: LoadBalancer
