kubernetes/apps/network/stunner/gateway/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.${MAIN_DOMAIN}
    external-dns.alpha.kubernetes.io/hostname: turn.${MAIN_DOMAIN}
    lbipam.cilium.io/ips: 192.168.0.192
    lbipam.cilium.io/sharing-key: internal
  labels:
    stunner.l7mp.io/owned-by: stunner
    stunner.l7mp.io/related-gateway-name: stunner
    stunner.l7mp.io/related-gateway-namespace: network
  name: stunner-lb-internal
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies: [IPv4]
  ports:
    - name: udp
      port: 3478
      protocol: UDP
      targetPort: 3478
    - name: tls
      port: 5349
      protocol: TCP
      targetPort: 5349
  selector:
    app: stunner
    stunner.l7mp.io/related-gateway-name: stunner
    stunner.l7mp.io/related-gateway-namespace: network
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: LoadBalancer
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   annotations:
#     external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
#     external-dns.alpha.kubernetes.io/hostname: turn.${SECRET_DOMAIN}
#   labels:
#     stunner.l7mp.io/owned-by: stunner
#     stunner.l7mp.io/related-gateway-name: stunner
#     stunner.l7mp.io/related-gateway-namespace: network
#   name: stunner-lb-external
# spec:
#   loadBalancerClass: io.cilium/node
#   externalTrafficPolicy: Local
#   internalTrafficPolicy: Cluster
#   ports:
#     - name: udp
#       port: 3478
#       protocol: UDP
#       targetPort: 3478
#     - name: tls
#       port: 5349
#       protocol: TCP
#       targetPort: 5349
#   selector:
#     app: stunner
#     stunner.l7mp.io/related-gateway-name: stunner
#     stunner.l7mp.io/related-gateway-namespace: network
#   sessionAffinity: ClientIP
#   sessionAffinityConfig:
#     clientIP:
#       timeoutSeconds: 10800
#   type: LoadBalancer
