kubernetes/apps/network/stunner/gateway/gateway.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.m00nlit.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: stunner
  annotations:
    stunner.l7mp.io/enable-mixed-protocol-lb: "true"
    # stunner.l7mp.io/external-traffic-policy: local
    stunner.l7mp.io/service-type: ClusterIP
    # lbipam.cilium.io/sharing-key: external
    # lbipam.cilium.io/ips: 2a02:a313:43e4:7080::7dc5,fd42:78a5:2c09::200,192.168.0.192
    # external-dns.alpha.kubernetes.io/hostname: "turn2.${SECRET_DOMAIN}"
spec:
  gatewayClassName: stunner
  listeners:
    - name: tls
      port: 5349
      protocol: TURN-TLS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: ${APP}-tls
    - name: udp
      port: 3478
      protocol: TURN-UDP
      allowedRoutes:
        namespaces:
          from: All
