kubernetes/apps/network/stunner/gateway/tlsroute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.m00nlit.dev/gateway.networking.k8s.io/tlsroute_v1alpha3.json
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: stunner-turns
spec:
  parentRefs:
    - name: internal
    - name: external
  hostnames: ["turns.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - name: stunner
          port: 5349
